move to CoffeeScript

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -14,8 +14,8 @@
 
   <script src="https://raw.github.com/DmitryBaranovskiy/raphael/master/raphael.js"></script>
   <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-  <script type="text/javascript" src="../build/util.js"></script>
-  <script type="text/javascript" src="../build/piepie.js"></script>
+  <script type="text/javascript" src="../build/final/util.js"></script>
+  <script type="text/javascript" src="../build/final/piepie.js"></script>
   <script type="text/javascript" src="piepie-test.js"></script>
 
   <script type="text/javascript">
