--- a/piepie.html
+++ b/piepie.html
@@ -5,8 +5,8 @@
         <title>PiePie charting</title>
         <script src="https://raw.github.com/DmitryBaranovskiy/raphael/master/raphael.js"></script>
 		<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-        <script src="build/util.js"></script>
-        <script src="build/piepie.js"></script>
+        <script src="build/final/util.js"></script>
+        <script src="build/final/piepie.js"></script>
         <script>
         $(window).load(function(){
 			new PiePie({
@@ -18,7 +18,7 @@
 				colors: ["#265434", "#3F99D2", "#ED23CD", "#B6EBD9", "#68AB79"],
 				dataURL: "testdata/piepie.json",
 				rotation: 0
-			});
+			});/*
 			new PiePie({
 				x: 360,
 				y: 0,
@@ -48,7 +48,7 @@
 				colors: ["#245412", "#5634D2", "#ED35CD", "#41EBD9", "#68AB22"],
 				dataURL: "testdata/piepie3.json",
 				rotation: 270
-			});
+			});*/
 		});
         </script>
 	</head>
